--- a/src/JournalEntry.css
+++ b/src/JournalEntry.css
@@ -41,6 +41,7 @@
 .Journal-entry-image {
     margin-right: 0.5em;
     border-radius: 15px;
+    min-width: 128px;
 }
 
 .Journal-entry-description {
